Opened 14 years ago
Closed 14 years ago
#1903 closed defect (fixed)
ffplay: audio wave does not refresh for mp3s with apic
| Reported by: | ami_stuff | Owned by: | Marton Balint |
|---|---|---|---|
| Priority: | normal | Component: | ffplay |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
audio wave ("w" key) does not refresh for mp3s with apic
http://www.datafilehost.com/download-5d5cc50f.html
C:\>ffmpeg -i multiple_apics.mp3
ffmpeg version N-46283-g1475815 Copyright (c) 2000-2012 the FFmpeg developers
built on Nov 2 2012 02:31:20 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
libavutil 52. 1.100 / 52. 1.100
libavcodec 54. 70.100 / 54. 70.100
libavformat 54. 35.100 / 54. 35.100
libavdevice 54. 3.100 / 54. 3.100
libavfilter 3. 21.106 / 3. 21.106
libswscale 2. 1.102 / 2. 1.102
libswresample 0. 16.100 / 0. 16.100
libpostproc 52. 1.100 / 52. 1.100
[mp3 @ 0x1edc2e0] Format mp3 detected only with low score of 24, misdetection po
ssible!
[mp3 @ 0x1edc2e0] max_analyze_duration 5000000 reached at 5015510
Input #0, mp3, from 'multiple_apics.mp3':
Metadata:
title : title
album : album
artist : artist
encoder : Lavf54.6.101
genre : Acid Punk
track : 1
date : 1999
Duration: 00:00:10.06, start: 0.000000, bitrate: 2117 kb/s
Stream #0:0: Audio: mp3, 44100 Hz, stereo, s16, 128 kb/s
Stream #0:1: Video: png, rgb24, 640x480, 90k tbr, 90k tbn, 90k tbc
Metadata:
title : studio logo
comment : Publisher/Studio logotype
Stream #0:2: Video: mjpeg, yuvj420p, 320x240, 90k tbr, 90k tbn, 90k tbc
Metadata:
title : other
comment : Other
Stream #0:3: Video: png, rgb24, 1024x768, 90k tbr, 90k tbn, 90k tbc
Metadata:
title : illustration
comment : Illustration
Stream #0:4: Video: mjpeg, yuvj420p, 1024x768, 90k tbr, 90k tbn, 90k tbc
Metadata:
title : cover
comment : Cover (front)
At least one output file must be specified
Attachments (1)
Change History (4)
by , 14 years ago
| Attachment: | multiple_apics_cut.mp3 added |
|---|
comment:1 by , 14 years ago
| Component: | undetermined → FFplay |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 14 years ago
| Owner: | set to |
|---|
Note:
See TracTickets
for help on using tickets.



Reproducible with:
$ ffplay multiple_apics_cut.mp3 -showmode 1
and
$ ffplay multiple_apics_cut.mp3 -showmode 2