ffplay: always display audio visualization if mode is set

Fixes ticket #1903.

Signed-off-by: Marton Balint <cus@passwd.hu>